k8s/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-a
spec:
  host: service-a
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
